code for chapters 1,2,3,9